Mobile spacing fixes + other minor fixes

--- a/styles/base_style.css
+++ b/styles/base_style.css
@@ -141,6 +141,7 @@ body {
    letter-spacing: 5pt;
    font-weight: 700;
    text-decoration: none;
+   user-select: none;
 }
 
 #nav-home:hover .navhearts {
@@ -150,7 +151,7 @@ body {
 .navtext {
    font-family: "appFont";
    color: var(--header);
-   text-decoration: none;
+   user-select: none;
 }
 
 #nav-home:hover .navtext {
@@ -184,6 +185,7 @@ h1 {
    font-size: 50pt;
    letter-spacing: 15pt;
    font-weight: 700;
+   user-select: none;
 }
 
 h2 {
@@ -213,5 +215,9 @@ h2 {
 
    body {
       background-color: var(--contentbox);
+   }
+
+   .navhearts {
+      display: none;
    }
 }
